# parasync

./: .gitignore  CLAUDE.md  MMS_FA_SETUP.md  MMS_STATUS.md  README.md  example.py  main.py  parasync.py  process_audio.py  pyproject.toml  requirements.txt  test_tts.py  viewer.html
.claude/: settings.local.json
aligner/: __init__.py  asr_recognizer.py  mms_aligner.py  nonverbal_detector.py  phoneme_aligner.py  textgrid_exporter.py  torchaudio_aligner.py
examples/: Englishtest.TextGrid
parasync/: __init__.py  tts_generator.py
scripts/: download_mms_model.py
tests/: README.md  __init__.py  conftest.py  test_integration.py  test_merge_alignments.py  test_nonverbal_detector.py  test_phoneme_aligner.py  test_textgrid_exporter.py  test_tts_generator.py
