[project]
name = "parasync"
version = "0.1.0"
description = "Speech alignment toolkit with nonverbal event detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chattts>=0.2.4",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "torchvision>=0.25.0",
    "transformers<4.52",
    "textgrid>=1.6.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "jieba>=0.42.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parasync", "aligner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "tts: marks tests that require TTS model",
]

[tool.coverage.run]
source = ["parasync", "aligner"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
